--- a/src/views/sensor.hbs
+++ b/src/views/sensor.hbs
@@ -1,5 +1,3 @@
-<!--script src="src/sensor.js"></script-->
-
 {{!-- <body class="hold-transition layout-top-nav"></body> --}}
 <div class="wrapper">
 
@@ -16,6 +14,7 @@
         </div><!-- /.row -->
       </div><!-- /.container-fluid -->
     </div>
+    <!-- /.content-header -->
 
     <!-- Main content -->
     <div class="content">
@@ -28,18 +27,21 @@
 
             <div class="card card-primary card-outline">
               <div class="card-header">
+                <h5 class="card-title m-0">Género</h5>
+              </div>
+              <div class="card-body">
+                <img src="/img/heterosexual-unscreen.gif" width="100">
+                <br>
+                <p><h2><b> {{latestsensor.genero}} </b></h2></p>
+              </div>
+            </div><!-- /.card -->
+
+            <div class="card card-primary card-outline">
+              <div class="card-header">
                 <h5 class="card-title m-0">Ritmo Cardiaco</h5>
               </div>
-               <div class="card-body">
-        <ul>
-            {{#each sensores}}
-                <li>Altura: {{this.altura}} cm, Timestamp: {{this.timestamp}}</li>
-            {{/each}}
-        </ul>
-    </div>
               <div class="card-body">
                 <img src="/img/heartbeat-unscreen.gif" width="100">
-                <!--p id="alturaValue">90 bpm</p-->
               </div>
             </div><!-- /.card -->
 
@@ -49,7 +51,6 @@
               </div>
               <div class="card-body">
                 <img src="/img/weight-scale-unscreen.gif" width="100">
-                <!--p id="alturaValue"> 51 Kg</p-->
               </div>
             </div><!-- /.card -->
 
@@ -58,8 +59,8 @@
                 <h5 class="card-title m-0">Temperatura corporal</h5>
               </div>
               <div class="card-body">
-                <img src="/img/temperature-unscreen.gif" width="100">
-                <!--p id="alturaValue"> 36.5 C</p-->
+                <img src="/img/temperature-unscreen.gif" width="80">
+                <p><h2><b> {{latestsensor.temperatura}} °C</b></h2></p>
               </div>
             </div><!-- /.card -->
 
@@ -69,12 +70,23 @@
               </div>
               <div class="card-body">
                 <img src="/img/height-unscreen.gif" width="100">
-                <!--p id="alturaValue"> 1.70 cm</p-->
+                <p><h2><b> {{latestsensor.altura}} cm</b></h2></p>
               </div>
-            </div><!-- /.card -->
-          </div>
+              </div><!-- /.card -->
+            </div>
 
+              <div class="card card-primary card-outline">
+              <div class="card-header">
+                <h5 class="card-title m-0">Guardar datos en formato excel</h5>
+              </div>
+              <div class="card-body">
+                <img src="/img/download-unscreen.gif" width="100">
+                <br>
+                <a type="button" class="btn btn-success" href="/descargar-excel">Descargar</a> <br>
 
+              </div>
+              </div><!-- /.card -->
+            </div>
            
             </div>
           </div>
