--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -11,7 +11,7 @@
         <a href="/" class="nav-link">Inicio</a>
       </li>     
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="/sensor" class="nav-link">Sensor</a>
+        <a href="/sensores" class="nav-link">Sensor</a>
       </li> 
       <li class="nav-item d-none d-sm-inline-block">
         <a href="/about" class="nav-link">Formulario</a>
