--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -8,7 +8,7 @@
       <div class="container">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1 class="m-0 text-dark"> Mediciones <small> </small></h1>
+            <h1 class="m-0 text-dark"> SaludAI <small> </small></h1>
           </div><!-- /.col -->
         </div><!-- /.row -->
       </div><!-- /.container-fluid -->
@@ -26,7 +26,7 @@
 
             <div class="card card-primary card-outline">
               <div class="card-body">
-                <h5 class="card-title">IOTopía: Convierte sensores en datos inteligentes. Plataforma IoT que registra, almacena y visualiza datos en tiempo real con gráficas interactivas, facilitando la toma de decisiones informadas y optimizando operaciones en diversos sectores </h5>
+                <h5 class="card-title">SaludAI: Bienvenido a SaludAI, un sistema integral de monitoreo de salud diseñado para atender a comunidades vulnerables. Nuestra plataforma está comprometida con la salud y el bienestar de las personas, utilizando tecnología de vanguardia para brindar una atención médica precisa y personalizada.</h5>
                 <a href="/users/signin" class="card-link">Ya estoy registrado</a>
                 <a href="/users/signup" class="card-link">Registrarme</a>
                 <a href="/about" class="card-link">Más info</a>
@@ -37,23 +37,25 @@
           <div class="col-lg-6">
             <div class="card">
               <div class="card-header">
-                <h5 class="card-title m-0">¿Que es IoT?</h5>
+                <h5 class="card-title m-0">¿Qué hace SaludAI?</h5>
               </div>
               <div class="card-body">
                 
-                <p class="card-text">IoT (Internet of Things) es un concepto tecnológico que se refiere a la interconexión de dispositivos físicos y objetos cotidianos a través de internet. Estos dispositivos, conocidos como "sensores" o "dispositivos inteligentes", están integrados con sensores, software y conectividad que les permiten recolectar y compartir datos de manera automatizada.</p>
+                <p class="card-text">Monitoreo continuo: A través de sensores biométricos avanzados, rastreamos de manera continua y no invasiva una variedad de parámetros de salud</p>
+                <p class="card-text">Evaluación Psicofísica: Nuestro sistema no se limita a mediciones físicas. También realizamos una evaluación psicofísica integral para comprender el estado emocional y mental de los individuos, reconociendo la importancia de la salud mental en el bienestar general.</p>
+                <p class="card-text">Predicciones a Largo Plazo: Al aprovechar la inteligencia artificial, generamos predicciones a largo plazo sobre la salud de las personas. Esto nos permite identificar riesgos y proporcionar recomendaciones proactivas para mantener una vida saludable.</p>
                 
               </div>
             </div>
 
             <div class="card card-primary card-outline">
               <div class="card-header">
-                <h5 class="card-title m-0">Sensor</h5>
+                <h5 class="card-title m-0">Nuestra Misión</h5>
               </div>
               <div class="card-body">
                 
 
-                <p class="card-text">Un dispositivo electrónico que detecta y responde a cambios en su entorno físico o químico. Proporciona datos esenciales para el funcionamiento de dispositivos inteligentes en el Internet de las cosas (IoT), permitiendo la adaptación al entorno y la toma de decisiones automatizadas en tiempo real.</p>
+                <p class="card-text">En SaludAI, nuestra misión es empoderar a las comunidades vulnerables brindando acceso a atención médica de calidad y prevención a través de la innovación tecnológica. Creemos que todos merecen una atención médica equitativa y personalizada, independientemente de su situación económica o geográfica.</p>
               
               </div>
             </div>
