--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -9,13 +9,12 @@
 
       <li class="nav-item d-none d-sm-inline-block">
         <a href="/" class="nav-link">Inicio</a>
-      </li>     
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="/sensores" class="nav-link">Sensor</a>
-      </li> 
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="/about" class="nav-link">Formulario</a>
       </li>
+      {{#if user}} 
+      <li class="nav-item d-none d-sm-inline-block">
+        <a href="/sensor" class="nav-link">Mediciones</a>
+      </li>
+      {{/if}} 
       <li class="nav-item d-none d-sm-inline-block">
         <a href="/about" class="nav-link">Acerca de nosotros</a>
       </li>
