--- a/src/views/interfaz/all-interfaz.hbs
+++ b/src/views/interfaz/all-interfaz.hbs
@@ -1,44 +1,20 @@
+{{!-- <body class="hold-transition layout-top-nav"></body> --}}
+<div class="wrapper">
 
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th scope="col">Nombre Interfaz</th>
-      <th scope="col">Ubicación</th>
-      <th scope="col">Medidas</th>
-      <th scope="col">Token</th>
-      <th scope="col">Visualizar</th>
-      <th scope="col">Editar</th>
-      <th scope="col">Eliminar</th>
-    </tr>
-  </thead>
-  
-{{#each interfaz}}
-  <tbody>
-    <tr class="table-active">
-      <th scope="row">{{name}}</th>
-      <td>{{ubicacion}}</td>
-      <td>{{sensor_1}}  {{sensor_2}}  {{sensor_3}} </td>
-      <td>{{sensor_codigo}}</td>
-      <td><a href='/interfaz/visulizar-sensor/{{_id}}' class = "btn btn-block" style="background-color: #B0E57C; color: #fff;">Visualizar</a></td>
-      <td><a href='/interfaz/edit-sensor/{{_id}}' class = "btn btn-block" style="background-color: #B0E57C; color: #fff;">Editar</a></td>
-   <td>
-  <form action='/interfaz/delete-sensor/{{_id}}?_method=DELETE' method="post" id="deleteForm{{_id}}">
-    <input type="hidden" name="_method" value="DELETE">
-    <button type="button" class="btn btn-danger" onclick="confirmDelete('{{_id}}')">
-      Delete
-    </button>
-  </form>
-</td>
-      
-    </tr>
+  <!-- Content Wrapper. Contains page content -->
+  <div class="content-wrapper">
 
-{{/each}}
-  </tbody>
-</table> 
-<script>
-  function confirmDelete(sensorId) {
-    if (confirm("¿Estás seguro de que deseas eliminar este elemento?")) {
-      document.getElementById("deleteForm" + sensorId).submit();
-    }
-  }
-</script>
+    <div class="content-header">
+      <div class="container">
+        <div class="row mb-2">
+          <div class="col-sm-6">
+            <h1 class="m-0 text-dark"> Resultados de las mediciones <small> </small></h1>
+            <a href="/generar-pdf" class="btn btn-primary">Descargar PDF</a>
+          </div><!-- /.col -->
+        </div><!-- /.row -->
+      </div><!-- /.container-fluid -->
+    </div>
+  </div>
+</div>
+<!-- ./wrapper -->
+
