--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -5,8 +5,7 @@
   <div class="content-wrapper">
 
 <h2>El software</h2>
-Texto aqui
-
+  <a href="/generar-pdf" class="btn btn-primary">Descargar PDF</a>
 </div>
 <!-- ./wrapper -->
 
