--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -12,7 +12,7 @@
       </li>
       {{#if user}} 
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="/sensor" class="nav-link">Mediciones</a>
+        <a href="/sensores" class="nav-link">Mediciones</a>
       </li>
       {{/if}} 
       <li class="nav-item d-none d-sm-inline-block">
