--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -23,7 +23,13 @@
             <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password" value="{{confirm_password}}">
           </div>
           <div class="form-group">
-            <input type="claveregistro" class="form-control" name="claveregistro" placeholder="Clave para registro" value="{{claveregistro}}">
+            <input type="text" class="form-control" name="codigo" value="{{codigo}}" placeholder="{{codigo}}" readonly>
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" name="confirm_codigo" value="{{confirm_codigo}}" placeholder="Ingrese su codigo">
+          </div>
+          <div class="form-group">
+            <input type="claveregistro" class="form-control" name="claveregistro" placeholder="Clave para registro: Salud_ai" value="{{claveregistro}}">
           </div>
           <button class="btn btn-block" style="background-color: #B0E57C; color: #fff;">
             Registrar 
