--- a/src/views/partials/sidebar.hbs
+++ b/src/views/partials/sidebar.hbs
@@ -28,6 +28,9 @@
 
         
         {{#if user}}
+          <div class="info">
+          <a href="/" class="d-block"><b>Codigo: </b> {{user.codigo}}</a>
+        </div>
         <li class="nav-item mb-2">
       <button class="btn btn-primary btn-block" style="background-color: #87CEFA; color: #fff;" onclick="window.location.href='/interfaz'">
         <i class="fas fa-satellite-dish"></i> Mis resultados
