--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -15,6 +15,9 @@
           <div class="form-group">
             <input type="password" class="form-control" name="password" placeholder="Password">
           </div>
+          <div class="form-group">
+            <input type="password" class="form-control" name="codigo" placeholder="Codigo :D">
+          </div>
           <button class="btn btn-block" style="background-color: #B0E57C; color: #fff;">
             Ingresar 
           </button>
