Se agrega el proyecto

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,4 +1,16 @@
 {{!-- <body class="hold-transition layout-top-nav"></body> --}}
+<div class="card card-primary card-outline">
+  <div class="card-header">
+    <h5 class="card-title m-0">Guardar datos en formato excel</h5>
+  </div>
+  <div class="card-body">
+    <img src="/img/download-unscreen.gif" width="100">
+    <br>
+    <a type="button" class="btn btn-success" href="/descargar-excel">Descargar</a> <br>
+  </div>
+</div><!-- /.card -->
+
+
 <div class="wrapper">
 
   <!-- Content Wrapper. Contains page content -->
