--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -12,8 +12,16 @@
       </li>
       {{#if user}} 
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="/sensores" class="nav-link">Mediciones</a>
+        <a href="/graficas" class="nav-link">Graficas</a>
       </li>
+
+      <!--li class="nav-item d-none d-sm-inline-block" style="background-color: #33d6ff; border:none">
+        <form action="/enviar-datos" method="POST">
+          <!-- Contenido del formulario (por ejemplo, campos de entrada, botones, etc.) -->
+          <!--button type="submit" class="btn btn-success" style="background-color: #33d6ff; border:none" href="fc">Frecuencia cardiaca</button>
+        </form>
+      </li-->
+
       {{/if}} 
       <li class="nav-item d-none d-sm-inline-block">
         <a href="/about" class="nav-link">Acerca de nosotros</a>
