--- a/src/views/sensor.hbs
+++ b/src/views/sensor.hbs
@@ -51,7 +51,10 @@
               </div>
               <div class="card-body">
                 <img src="/img/weight-scale-unscreen.gif" width="100">
+                <br>
+                <p><h2><b> {{latestsensor.peso}} Kg</b></h2></p>
               </div>
+              
             </div><!-- /.card -->
 
             <div class="card card-primary card-outline">
@@ -73,21 +76,7 @@
                 <p><h2><b> {{latestsensor.altura}} cm</b></h2></p>
               </div>
               </div><!-- /.card -->
-            </div>
-
-              <div class="card card-primary card-outline">
-              <div class="card-header">
-                <h5 class="card-title m-0">Guardar datos en formato excel</h5>
-              </div>
-              <div class="card-body">
-                <img src="/img/download-unscreen.gif" width="100">
-                <br>
-                <a type="button" class="btn btn-success" href="/descargar-excel">Descargar</a> <br>
-
-              </div>
-              </div><!-- /.card -->
-            </div>
-           
+            </div>           
             </div>
           </div>
           <!-- /.col-md-6 -->
