--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -3,7 +3,7 @@
     <div class="card mt-4 text-center">
       <div class="card-header">
         <h1 class="h4">
-            Account Register 
+            ¡Sus datos son seguros con SaludAI! 
         </h1>
       
       </div>
