--- a/src/views/partials/sidebar.hbs
+++ b/src/views/partials/sidebar.hbs
@@ -32,23 +32,23 @@
           <a href="/" class="d-block"><b>Codigo: </b> {{user.codigo}}</a>
         </div>
         <li class="nav-item mb-2">
-      <button class="btn btn-primary btn-block" style="background-color: #87CEFA; color: #fff;" onclick="window.location.href='/interfaz'">
+      <button class="btn btn-primary btn-block" style="background-color: #87CEFA; color: #fff;" onclick="window.location.href='/resultados'">
         <i class="fas fa-satellite-dish"></i> Mis resultados
       </button>
     </li>
     <li class="nav-item mb-2">
       <button class="btn btn-primary btn-block" style="background-color: #87CEFA; color: #fff;" onclick="window.location.href='/interfaz/addsensor'">
-        <i class="fas fa-plus"></i> Registrar datos
+        <i class="fas fa-plus"></i> Descargar datos
       </button>
     </li>
     <li class="nav-item mb-2">
     
-       <li class="nav-item">
+       <li class="nav-item mb-2">
     <a href="/users/logout" class="nav-link">
         <i class="fa fa-times-circle-o"></i>
-        <p style="color: red;">Salir</p>
+        <button lass="btn btn-primary btn-block" style="background-color: #ffffff; color: #ff0000;">Salir</button>
     </a>
-</li>
+    </li>
 
         {{else}}
             <li class="nav-item mb-2">
