--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -3,20 +3,20 @@
     <div class="card mt-4 text-center">
       <div class="card-header">
         <h1 class="h4">
-          Account Login
+          Bienvenido a SaludAI
         </h1>
       </div>
         <img class="rounded-circle mx-auto d-block logo m-4" src="/img/logo.png" alt="Logo">
       <div class="card-body">
         <form action="/users/signin" method="POST">
           <div class="form-group">
-            <input type="email" class="form-control" name="email" placeholder="Email" autofocus>
+            <input type="email" class="form-control" name="email" placeholder="Correo 📬" autofocus>
           </div>
           <div class="form-group">
-            <input type="password" class="form-control" name="password" placeholder="Password">
+            <input type="password" class="form-control" name="password" placeholder="Contraseña 🔒">
           </div>
           <div class="form-group">
-            <input type="password" class="form-control" name="codigo" placeholder="Codigo :D">
+            <input type="password" class="form-control" name="codigo" placeholder="Codigo 🔑">
           </div>
           <button class="btn btn-block" style="background-color: #B0E57C; color: #fff;">
             Ingresar 
